<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:weightSum="1" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.5" >

                <Button
                    android:id="@+id/gallery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_home_gallery"
                    android:gravity="center|bottom"
                    android:paddingBottom="20dp"
                    android:singleLine="false"
                    android:text="@string/newpicture"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_action_picture" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.5" >

                <Button
                    android:id="@+id/supplement"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_home_list_user"
                    android:gravity="center|bottom"
                    android:paddingBottom="20dp"
                    android:singleLine="false"
                    android:text="@string/supplement"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_action_view_as_grid" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:weightSum="1" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.5" >

                <Button
                    android:id="@+id/camera"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_home_camera"
                    android:gravity="center|bottom"
                    android:paddingBottom="20dp"
                    android:text="@string/camera"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_action_camera" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.5" >

                <Button
                    android:id="@+id/upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_home_update"
                    android:gravity="center|bottom"
                    android:paddingBottom="20dp"
                    android:text="@string/upload"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_action_upload_large" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.33" >

                <Button
                    android:id="@+id/profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bt_home_info"
                    android:gravity="center|bottom"
                    android:paddingBottom="10dp"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_action_person" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.33" >

                <Button
                    android:id="@+id/help"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bt_home_info"
                    android:gravity="center|bottom"
                    android:paddingBottom="10dp"
                    android:text="@string/help"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_action_help" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.33" >

                <Button
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bt_home_info"
                    android:gravity="center|bottom"
                    android:paddingBottom="10dp"
                    android:text="@string/about"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_action_about" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>